--- a/index-START.html
+++ b/index-START.html
@@ -16,6 +16,9 @@
   </form>
 <script>
 const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+function numberWithCommas(x) {
+    return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+}
 
 const cities = [];
 
@@ -33,12 +36,18 @@ function findMatches(wordToMatch, cities) {
 function displayMatches() {
   const matchArray = findMatches(this.value, cities);
   const html = matchArray.map(place => {
+    const regex = new RegExp(this.value, 'gi');
+    const cityName = place.city.replace(regex, `<span class=\"hl\">${this.value}</span>`);
+    const stateName = place.state.replace(regex, `<span class=\"hl\">${this.value}</span>`)
     return `
       <li>
-        <span class="name">${place.city}, ${place.state}</span>
+        <span class="name">${cityName}, ${stateName}</span>
+        <span class="population">${numberWithCommas(place.population)}</span>
       </li>
     `;
-  });
+  }).join('');
+
+  suggestions.innerHTML = html;
 }
 
 const searchInput = document.querySelector('.search');
